# piegy

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/DISABLED_workflows/: build_wheels.yml
docs/source/: Clarifications.rst  Minimal Usage.rst  Overview.rst  Typical Params.rst  Usage Examples.rst  conf.py  index.rst  piegy.analysis.rst  piegy.data_tools.rst  piegy.figures.rst  piegy.model.rst  piegy.simulation.rst  piegy.test_var.rst  piegy.videos.rst
piegy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  analysis.py  data_tools.py  model.py  videos.py
src/piegy/: __version__.py  analysis.py  simulation_py.py  videos.py
src/piegy/C_core/: C_core  patch.c  patch.h  runner.c  sim_funcs.c  sim_funcs.h
src/piegy/tools/: figure_tools.py
