[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'piegy'
version = '0.1.0'
description = 'Payoff-Driven Stochastic Spatial Model for Evolutionary Game Theory'
readme = 'README.md'
requires-python = '>=3.6'
license = {file = "LICENSE.txt"}
authors = [
    {name = 'Chenning Xu', email = 'cxu7@caltech.edu'}
]
keywords = ['Game Theory', 'Evolutionary Game Theory', 'Spatial Model', 'Stochastic Model', 'Payoff Driven']
dependencies = [
    'json', 
    'gzip', 
    'os', 
    'numpy',
    'matplotlib',
    'math',
    'timeit',
    'imageio>=2.37.0',
    're',
    'moviepy>=1.0.3',
    'seaborn>=0.13.2'
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = 'https://github.com/xiaomao05/Payoff-Driven_EGT'

